# MultiNodeLighter

./: .gitignore  CMakeHelpers.txt  CMakeLists.txt  README.md
Commons/: CMakeLists.txt  LogPublisher.cpp  LogPublisher.h
ServerNode/: CMakeLists.txt  README.md  main.cpp
ServerNode/src/: Rest.cpp  Rest.h
